tests/NormalTests/paczka1/fuzzy1/87866379.err
Error in line 11: 3qHUWSsC S607 89,5
Error in line 22: S293 S607 16,1
Error in line 27: cSC A177 57,X
Error in line 23: 3qHUWSsC S293 80,9
Error in line 31: 3qHUWSsC A528 18,0
Error in line 7: cSC S607 21,9
